# observer

./: .gitignore  Dockerfile  README.md  main.py  observer-manager.py  observer_manager.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
tests/: test.py
